<resources>
    <string name="app_name">auth-ui</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connect_with_facebookk">Connect with Facebook</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="welcome_back_you_ve_been_missed">Welcome back, you’ve been missed!</string>
    <string name="let_s_sign_you_in">Let’s Sign You In</string>
    <string name="by_creating_an_account_you_agree_to_our">By creating an account, you agree to our</string>
    <string name="email">Email</string>
    <string name="term_conditions"><![CDATA[Term & Conditions]]></string>
    <string name="getting_started">Getting Started</string>
    <string name="alrady_have_an_account">alrady have an account</string>
    <string name="connect_with_facebook">Connect with facebook</string>
</resources>