<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".fragment.LoginFragment">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/let_s_sign_you_in"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:text="@string/welcome_back_you_ve_been_missed"
                android:textColor="#515151"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/usernate_title"
                app:layout_constraintStart_toStartOf="@+id/usernate_title" />

            <EditText
                android:id="@+id/editTextTextLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="60dp"
                android:drawableStart="@drawable/person"
                android:drawablePadding="15dp"
                android:ems="10"
                android:hint="@string/username"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/pass_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/pass_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/password"
                android:textColor="#8F92A1"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
                app:layout_constraintStart_toStartOf="@+id/editTextPassword" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="145dp"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="15dp"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/usernate_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/username_or_email"
                android:textColor="#8F92A1"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextLogin"
                app:layout_constraintStart_toStartOf="@+id/editTextTextLogin" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sign_in_button"
                android:layout_width="351dp"
                android:layout_height="44dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/button_sign_in_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_bold"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/log_in"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/sign_in_facebook_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/under_sign_in_decription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="#8F92A1"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/sign_up_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/dm_sans_bold"
                    android:text="@string/sign_up"
                    android:textColor="@color/black" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sign_in_facebook_layout"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/rounded_facebook"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/button_sign_in_facebook_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/dm_sans_bold"
                    android:text="@string/connect_with_facebookk"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="@+id/imageView3" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/facebook"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.facebook.login.widget.LoginButton
                android:id="@+id/signInFacebookButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/rounded"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                tools:ignore="TouchTargetSizeCheck" />




        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>