<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:background="@color/white"
        tools:context=".fragment.RegistrateFragment">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:text="@string/welcome_back_you_ve_been_missed"
            android:textColor="#515151"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/email_title3"
            app:layout_constraintStart_toStartOf="@+id/email_title3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/getting_started"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sign_up_button"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/button_sign_in_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@drawable/log_in"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_facebook_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/under_sign_up_decription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alrady_have_an_account"
                android:textColor="#8F92A1"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/dm_sans_bold"
                android:text=" Sign in"
                android:textColor="@color/black" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sign_in_facebook_layout"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/rounded_facebook"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/button_sign_in_facebook_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/connect_with_facebook"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/facebook"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.facebook.login.widget.LoginButton
            android:id="@+id/signInFacebookButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rounded"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:ignore="TouchTargetSizeCheck" />


        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/person"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/pass_title"
            app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextPassword" />


        <EditText
            android:id="@+id/email_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/username_title"
            app:layout_constraintEnd_toEndOf="@+id/username"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/username_title" />


        <TextView
            android:id="@+id/pass_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/password"
            android:textColor="#8F92A1"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
            app:layout_constraintStart_toStartOf="@+id/editTextPassword" />

        <TextView
            android:id="@+id/username_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/username"
            android:textColor="#8F92A1"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/username"
            app:layout_constraintStart_toStartOf="@+id/editTextPassword" />

        <TextView
            android:id="@+id/email_title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/email"
            android:textColor="#8F92A1"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/email_address"
            app:layout_constraintStart_toStartOf="@+id/editTextPassword" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/terms_title"
            app:layout_constraintEnd_toEndOf="@+id/terms_title"
            app:layout_constraintStart_toStartOf="@+id/checkbox_agrre_terms" />

        <CheckBox
            android:id="@+id/checkbox_agrre_terms"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:text=""
            app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
            app:layout_constraintStart_toStartOf="@+id/sign_up_button" />

        <TextView
            android:id="@+id/terms_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/by_creating_an_account_you_agree_to_our"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/checkbox_agrre_terms"
            app:layout_constraintTop_toTopOf="@+id/checkbox_agrre_terms" />

        <TextView
            android:id="@+id/Term_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/term_conditions"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/terms_title"
            app:layout_constraintTop_toBottomOf="@+id/terms_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>